--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Ureckon Web Team",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
